force-app/main/default/objects/ccrz__L_Logger_Setup_Clone__c/ccrz__L_Logger_Setup_Clone__c.object-meta.xml
<CustomObject>
    <description>Creates the object referencing the values in the hierarchical custom setting. Email templates can refer only object and not custom settings.</description>
    <label>L_Logger Setup</label>
    <nameField>
        <displayFormat>Logger-{0000000}</displayFormat>
        <label>Logger Setup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>L_Logger Setup</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>