force-app/main/default/objects/ccrz__L_Logger_Setup_Clone__c/fields/ccrz__Application_Name__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Application_Name__c</fullName>
    <formula>$Setup.ccrz__L_Logger_Setup__c.ccrz__Application_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Name</label>
    <type>Text</type>
</CustomField>