force-app/main/default/objects/ccrz__L_Logger_Setup_Clone__c/fields/ccrz__Email_Body__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Email_Body__c</fullName>
    <formula>$Setup.ccrz__L_Logger_Setup__c.ccrz__Email_Body__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Body</label>
    <type>Text</type>
</CustomField>