force-app/main/default/objects/ccrz__L_Logger_Setup_Clone__c/fields/ccrz__Email_Footer__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Email_Footer__c</fullName>
    <formula>$Setup.ccrz__L_Logger_Setup__c.ccrz__Email_Footer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Footer</label>
    <type>Text</type>
</CustomField>